Bug 504139 - spectacle-6.3.80~25.gitb437ca3-1.fc42.x86_64 does not open window when called with '-E filename'
Summary: spectacle-6.3.80~25.gitb437ca3-1.fc42.x86_64 does not open window when called...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.3.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-13 08:28 UTC by slartibart70
Modified: 2025-05-20 22:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description slartibart70 2025-05-13 08:28:51 UTC
have some screenshots at hand you want to edit afterwards.
cd ~/Pictures/Screenshots

Call spectacle in edit-mode
spectacle -E Screenshot_20250513_101546.png

Expected result: editor window should open allowing me to manipulate the image.

Sometimes it helps if you start spectacle without params on commandline, but this worked only once.
Error messages (if, any are put to  stdout):

spectacle -E Screenshot_20250513_101546.png
QThreadStorage: entry 9 destroyed before end of thread 0x55724e67bbf0
QThreadStorage: entry 5 destroyed before end of thread 0x55724e67bbf0
QThreadStorage: entry 4 destroyed before end of thread 0x55724e67bbf0

or it just hangs without any window appearing so you need to Ctrl-C to exit
Comment 1 slartibart70 2025-05-13 08:29:08 UTC
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 2 Nate Graham 2025-05-13 19:29:01 UTC
Can confirm.
Comment 3 Noah Davis 2025-05-20 08:44:04 UTC
I can confirm this, but I cannot bisect a change that could have caused this. Even when going back to a commit from March 18th, the problem still exists. Perhaps it's an issue caused by dependencies?
Comment 5 Noah Davis 2025-05-20 16:44:40 UTC
(In reply to daron439 from comment #4)
> It's
> https://invent.kde.org/graphics/spectacle/-/commit/
> 43608e3feca710d03b930146123f16c5007e098c

I definitely remembered testing the -E option in April, but maybe I was mistaken.
Comment 6 Bug Janitor Service 2025-05-20 16:45:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/454
Comment 7 Noah Davis 2025-05-20 21:02:10 UTC
Git commit 3b5a5bcde8c78d733a1304e06ef6521cf92f623c by Noah Davis.
Committed on 20/05/2025 at 16:44.
Pushed by ndavis into branch 'master'.

Fix --edit-existing not showing a window

M  +1    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/-/commit/3b5a5bcde8c78d733a1304e06ef6521cf92f623c
Comment 8 Noah Davis 2025-05-20 21:02:31 UTC
Git commit bb2b295b04374ad7ce1426514ec5004ff6585245 by Noah Davis.
Committed on 20/05/2025 at 21:02.
Pushed by ndavis into branch 'Plasma/6.4'.

Fix --edit-existing not showing a window


(cherry picked from commit 3b5a5bcde8c78d733a1304e06ef6521cf92f623c)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +1    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/-/commit/bb2b295b04374ad7ce1426514ec5004ff6585245
Comment 9 slartibart70 2025-05-20 22:19:02 UTC
Thanks a lot for the fix:
I'm using spectacle-6.4.80~2.git3b5a5bc-1.fc42.x86_64 right now, no problems so far