Fix --edit-existing not showing a window

BUG: 504139